--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -1,16 +1,17 @@
 .container {
   display: grid;
   grid-template-columns: 2fr 1fr;
-  max-width: 960px;
   margin: 60px auto;
 }
 
 .content {
-  padding: 0 30px;
+  padding: 0 2em;
+  max-width: 720px;
 }
 
 .sidebar {
-  padding: 0 30px;
+  padding: 0 2em;
+  max-width: 360px;
 }
 
 .sidebar h3 {
@@ -52,4 +53,29 @@
   border: 2px solid #fff;
   border-radius: 4px;
   cursor: pointer;
+}
+
+/* Transaction list */
+
+.transactions li {
+  margin: 30px auto;
+  border: 1px solid #f2f2f2;
+  box-shadow: 3px 3px 5px rgba(50, 50, 50, 0.1);
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  border-left: 4px solid #1f9751;
+}
+
+.transactions .name {
+  color: #777;
+  font-size: 1.4em;
+  margin-right: auto;
+}
+
+.transactions .amount {
+  margin-right: 40px;
+  color: #777;
+  font-weight: bold;
+  font-size: 1.6em;
 }
