add delete option

--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -64,6 +64,8 @@
   padding: 20px;
   display: flex;
   align-items: center;
+  position: relative;
+  overflow: hidden;
   border-left: 4px solid #1f9751;
 }
 
@@ -78,4 +80,18 @@
   color: #777;
   font-weight: bold;
   font-size: 1.6em;
+}
+
+.transactions button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background: #ddd;
+  color: #777;
+  border: none;
+  padding: 12px 8px;
+  text-align: center;
+  line-height: 0;
+  font-size: 0.9em;
+  cursor: pointer;
 }
